Changed style.css to fix viewport so it shows correctly on mobile devices

--- a/style.css
+++ b/style.css
@@ -17,11 +17,14 @@ div.mainbox {
     border-radius: 10px;
     border-width: 5px;
     border-style: solid;
-    min-width: 500px;
+    min-width: 300px;           /* optional lower limit */
+    max-width: 90vw;            /* never exceed 90% of viewport width */
     min-height: 40px;
     padding: 20px;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.247);
+    box-sizing: border-box;
 }
+
 
 input.line {
     background-color: #414141;
